# MoodMatchMovies

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt
frontend/: index.html
frontend/src/: App.css  App.tsx  types.ts
src/: app.py  emotions.py  llm.py  models.py  routes.py  search.py  svd.py
src/data/: final_movies.json  imdb_summed_vectors.json  letterboxd_250_summed_vectors.json  rt_summed_vectors.json
