[project]
name = "moodmatchmovies"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask==2.2.5",
    "flask-cors==3.0.10",
    "flask-sqlalchemy==3.1.1",
    "gunicorn>=25.1.0",
    "huggingface-hub>=1.7.1",
    "infosci-spark-client",
    "numpy>=2.4.3",
    "onnxruntime>=1.24.3",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "sqlalchemy==2.0.36",
    "tokenizers>=0.22.2",
    "werkzeug==2.2.2",
]

[tool.uv.sources]
infosci-spark-client = { git = "https://github.com/MrPeterss/infosci-spark-client.git" }
